force-app/main/default/objects/Deadline__c/Deadline__c.object-meta.xml
<CustomObject>
    <description>Deadline related to an account.</description>
    <label>Deadline</label>
    <nameField>
        <label>Account Deadline Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deadlines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>