force-app/main/default/objects/Deadline__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The account this deadline applies to.</description>
    <inlineHelpText>The account this deadline applies to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deadlines</relationshipLabel>
    <relationshipName>Deadlines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>