force-app/main/default/objects/Deadline__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Grouping of deadline (e.g. final deadlines can group)</description>
    <inlineHelpText>Grouping of deadline (e.g. final deadlines can group)</inlineHelpText>
    <label>Category</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>