force-app/main/default/objects/Deadline__c/fields/Occurance__c.field-meta.xml
<CustomField>
    <fullName>Occurance__c</fullName>
    <description>Deadline occuring once.</description>
    <inlineHelpText>Deadline occuring once.</inlineHelpText>
    <label>Occurance</label>
    <type>Date</type>
</CustomField>