force-app/main/default/objects/Deadline__c/fields/Yearly_Date__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Date__c</fullName>
    <description>Annual Occurance (M/D)</description>
    <inlineHelpText>Annual Occurance (M/D)</inlineHelpText>
    <label>Yearly Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>